# linkedin-job-automation

./: .env.example  .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt  run.py  setup.py
alembic/: env.py
alembic/versions/: a9ef2b2e61c9_initial_schema.py  b1c3d4e5f6a7_add_applied_to_jobs.py
app/api/: deps.py
app/api/v1/: jobs.py  resumes.py  router.py  tailoring.py
app/core/: config.py  database.py  logging.py
app/models/: __init__.py  job.py  resume.py  tailored_resume.py
app/repositories/: base.py  job_repository.py  resume_repository.py  tailored_resume_repository.py
app/schemas/: job.py  resume.py  tailored_resume.py
app/scrapers/: __init__.py  base.py  indeed.py  linkedin.py  naukri.py
app/services/: resume_service.py  scraper_service.py  storage_service.py  tailoring_service.py
app/utils/: docx_editor.py  docx_generator.py  docx_parser.py  pdf_editor.py  pdf_generator.py  pdf_parser.py  text_utils.py
frontend/: app.js  index.html  style.css
modules/: auto_apply.py  google_docs.py  linkedin_scraper.py  resume_tailor.py
tests/: conftest.py
tests/unit/: test_scrapers.py  test_text_utils.py
