[tool.poetry]
name = "job-automation"
version = "0.1.0"
description = "Intelligent job automation platform"
authors = ["You"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = { extras = ["standard"], version = "^0.30.0" }
sqlalchemy = { extras = ["asyncio"], version = "^2.0.30" }
asyncpg = "^0.30.0"
alembic = "^1.13.1"
pydantic = "^2.7.1"
pydantic-settings = "^2.3.0"
anthropic = "^0.28.0"
playwright = "^1.44.0"
beautifulsoup4 = "^4.12.3"
lxml = "^5.2.2"
pdfplumber = "^0.11.0"
python-multipart = "^0.0.9"
aiofiles = "^23.2.1"
httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
pytest-asyncio = "^0.23.7"
pytest-mock = "^3.14.0"
httpx = "^0.27.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
